feat: Add real road-based routing system and fix green location marker
- Implement comprehensive 3-tier routing system:
  * MapTiler Directions API for accurate road navigation
  * OpenRouteService fallback for reliability
  * Straight-line route as final fallback
- Add 'Route Here' buttons to all location popups
- Fix green pulsing location marker visibility and stability
- Add route visualization with green dashed polylines
- Implement clear route functionality with floating button
- Add proper error handling and user feedback for routing
- Style route buttons with emergency/safe place themes
- Ensure stable location marker positioning without floating

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <button class="fab secondary" id="centerLocationBtn" title="Center on My Location">
                 <i class="fas fa-crosshairs"></i>
             </button>
+            
+            <button class="fab secondary" id="clearRouteBtn" title="Clear Route" style="display: none;">
+                <i class="fas fa-times"></i>
+            </button>
         </div>
         
         <!-- Quick Search Bar (Minimized by default) -->
