remove button, location fix and rout fix : major

--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
             <button class="fab secondary" id="centerLocationBtn" title="Center on My Location">
                 <i class="fas fa-crosshairs"></i>
             </button>
-            
-            <button class="fab secondary" id="clearRouteBtn" title="Clear Route" style="display: none;">
-                <i class="fas fa-times"></i>
-            </button>
         </div>
         
         <!-- Quick Search Bar (Minimized by default) -->
@@ -80,6 +76,11 @@
                 <span>Safe Zone</span>
             </div>
         </div>
+    </div>
+
+    <!-- Debug Panel (Outside mobile app container) -->
+    <div id="debugPanel">
+        <div id="debugLog"></div>
     </div>
 
     <!-- Loading Overlay -->
