--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     </div>
 
     <!-- Debug Panel (Outside mobile app container) -->
-    <div id="debugPanel">
-        <div id="debugLog"></div>
+    <div id="debugPanel" style="position: fixed !important; bottom: 5px !important; right: 5px !important; width: 100px !important; max-height: 25px !important; background: rgba(0,0,0,0.02) !important; color: rgba(255,255,255,0.1) !important; border: 1px solid rgba(51,51,51,0.03) !important; border-radius: 3px !important; padding: 2px !important; font-size: 5px !important; z-index: 1 !important; pointer-events: none !important; opacity: 0.03 !important; transform: scale(0.6) !important;">
+        <div id="debugLog" style="height: 18px !important; overflow-y: auto !important; color: rgba(255,255,255,0.1) !important; font-size: 5px !important;"></div>
     </div>
 
     <!-- Loading Overlay -->
